force-app/main/default/objects/ServiceNow_Settings__mdt/ServiceNow_Settings__mdt.object-meta.xml
<CustomObject>
    <label>ServiceNow Settings</label>
    <pluralLabel>ServiceNow Settings</pluralLabel>
</CustomObject>