force-app/main/default/objects/ServiceNow_Settings__mdt/fields/CoursesUCaseTypes__c.field-meta.xml
<CustomField>
    <fullName>CoursesUCaseTypes__c</fullName>
    <label>Courses U Case Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>