force-app/main/default/objects/ServiceNow_Settings__mdt/fields/CoursesUCategory__c.field-meta.xml
<CustomField>
    <fullName>CoursesUCategory__c</fullName>
    <label>CoursesUCategory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>