force-app/main/default/objects/ServiceNow_Settings__mdt/fields/CoursesUId__c.field-meta.xml
<CustomField>
    <fullName>CoursesUId__c</fullName>
    <label>Assignment Group Id - Courses U</label>
    <length>255</length>
    <type>Text</type>
</CustomField>