force-app/main/default/objects/ServiceNow_Settings__mdt/fields/CoursesUUCategory__c.field-meta.xml
<CustomField>
    <fullName>CoursesUUCategory__c</fullName>
    <label>U Category Id - Courses U</label>
    <length>255</length>
    <type>Text</type>
</CustomField>