force-app/main/default/objects/ServiceNow_Settings__mdt/fields/MagasinsUCaseTypes__c.field-meta.xml
<CustomField>
    <fullName>MagasinsUCaseTypes__c</fullName>
    <label>Magasins U Case Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>