force-app/main/default/objects/ServiceNow_Settings__mdt/fields/MagasinsUCategory__c.field-meta.xml
<CustomField>
    <fullName>MagasinsUCategory__c</fullName>
    <label>MagasinsUCategory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>