force-app/main/default/objects/ServiceNow_Settings__mdt/fields/MagasinsUId__c.field-meta.xml
<CustomField>
    <fullName>MagasinsUId__c</fullName>
    <label>Assignment Group Id - Magasins U</label>
    <length>255</length>
    <type>Text</type>
</CustomField>