force-app/main/default/objects/ServiceNow_Settings__mdt/fields/MagasinsUUCategory__c.field-meta.xml
<CustomField>
    <fullName>MagasinsUUCategory__c</fullName>
    <label>U Category Id - Magasins U</label>
    <length>255</length>
    <type>Text</type>
</CustomField>