force-app/main/default/objects/ServiceNow_Settings__mdt/fields/RequestTimeout__c.field-meta.xml
<CustomField>
    <fullName>RequestTimeout__c</fullName>
    <label>Request Timeout</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>