force-app/main/default/objects/ServiceNow_Settings__mdt/fields/TimezoneShift__c.field-meta.xml
<CustomField>
    <fullName>TimezoneShift__c</fullName>
    <description>Timezone Shift hours</description>
    <label>Timezone Shift</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>